fix mgmt commands

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-redis-consumergroup
-version = 0.0.1
+version = 0.0.2
 description = A lightweight and reliable task queue implemented using Redis Streams and ConsumerGroups
 long_description = file: README.md
 url = https://github.com/pphysch/django-redis-consumergroup
@@ -23,7 +23,7 @@ classifiers =
 
 [options]
 include_package_data = true
-packages = drcg, drcg.migrations
+packages = drcg, drcg.migrations, drcg.management, drcg.management.commands
 python_requires = >=3.9
 install_requires =
     Django >= 4.0
